[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/spritesheets/oposum.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Possum.gd" type="Script" id=2]
[ext_resource path="res://Assets/spritesheets/enemy-deadth.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 36, 28 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 36, 28 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 36, 28 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 36, 28 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 36, 28 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 36, 28 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 40, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 40, 41 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), null ],
"loop": false,
"name": "Stomped",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 14.5, 7 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 13.5, 2.5 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 17.5, 5.5 )

[node name="Possum" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "Run"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 7 )
shape = SubResource( 8 )

[node name="top_checker" type="Area2D" parent="." groups=["Possum"]]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -0.5, -3 )
shape = SubResource( 9 )

[node name="side_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_checker"]
position = Vector2( -0.5, 6.5 )
shape = SubResource( 16 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="side_checker" to="." method="_on_side_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
